2010-03-14  Ethan A Merritt  <merritt@u.washington.edu

	* INSTALL config/README config/makefile.amg config/makefile.ami
	config/makefile.dj2 config/makefile.unx config/term_pc.h configure.in
	docs/Makefile.in docs/README docs/gnuplot.doc src/Makefile.am
	src/Makefile.maint src/amiga.c src/command.c src/command.h src/graph3d.c
	src/graphics.c src/graphics.h src/makefile.all src/makefile.awc
	src/plot.c src/scanner.c src/stdfn.c src/stdfn.h src/syscfg.h src/term.c
	src/term.h src/variable.c term/amiga.trm:

	Remove code specific to amiga platforms. 
	30 files changed, 43 insertions(+), 1941 deletions(-)

	* config/makefile.dj2 config/makefile.unx config/term_pc.h
	configure.in docs/doc2texi.el src/eval.c src/eval.h src/makefile.all
	src/makefile.awc src/plot.c src/syscfg.h src/term.c src/term.h
	term/apollo.trm term/gpr.trm:

	Remove code specific to support of Apollo workstations.
	The final gnuplot version in the apollo archives was gnuplot 2.0 (1996).
	15 files changed, 16 insertions(+), 1211 deletions(-)

	* src/pm3d.c src/tables.c src/term.c term/gd.trm term/pm.trm
	term/post.trm: Remove bits of dead code.

2010-03-13  Ethan A Merritt  <merritt@u.washington.edu

 	* config/makefile.286 config/makefile.msc config/makefile.msw
	config/makefile.tc config/makefile.wc config/makefile.unx
	src/Makefile.am src/alloc.c src/alloc.h src/eval.c src/gnuplot.def
	src/graph3d.c src/help.c src/hidden3d.h src/misc.c src/plot.c
	src/plot2d.c src/set.c src/show.c src/syscfg.h src/term.c
	src/term_api.h src/unset.c src/util3d.c term/cgm.trm:

	We have not supported 16-bit DOS or WIN since version 4.0.
	Remove the old cruft that was wrapped in conditional flags
	DOS16 WIN16 DOSX286 LITE
	23 files changed, 11 insertions(+), 324 deletions(-)

2010-03-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (getusername): Fix segfault if neither USER or USERNAME
	are present in the environment.

2010-03-09  Ethan A Merritt  <merritt@u.washington.edu>
