@@ -1,3 +1,8 @@
+2010-03-17  Ethan A Merritt  <merritt@u.washington.edu
+
+	* plot.c (main): Initialize c_token to a legal value at the start of
+	interactive input.
+
 2010-03-14  Ethan A Merritt  <merritt@u.washington.edu
 
 	* INSTALL config/README config/makefile.amg config/makefile.ami
